Changes before Firebase Studio auto-run

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgresql://postgres:9gkgBLHSKjo0SG@db.owncafwelapstzncqhiv.supabase.co:5432/postgres
+DATABASE_URL="postgresql://postgres.owncafwelapstzncqhiv:9gkgBLHSKjo0SG@aws-0-ap-south-1.pooler.supabase.com:6543/postgres"
